<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jyl.healthytakeout.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.jyl.healthytakeout.ui.social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/navigation_myinfo"
        android:name="com.jyl.healthytakeout.ui.myinfo.MyinfoFragment"
        android:label="@string/title_myinfo"
        tools:layout="@layout/fragment_myinfo" />
</navigation>