<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_gray_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/ic_avatar_boy" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="用户名"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/kcalnotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:gravity="center_horizontal"
                    android:text="卡路里提醒"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <com.jyl.healthytakeout.widget.section.SectionView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_major">

            <com.jyl.healthytakeout.widget.section.SectionTextItemView
                android:id="@+id/btn_my_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:siv_icon="@drawable/ic_order"
                app:siv_indicator="true"
                app:siv_name="@string/label_my_order" />

            <com.jyl.healthytakeout.widget.section.SectionTextItemView
                android:id="@+id/btn_my_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:siv_icon="@drawable/ic_address"
                app:siv_indicator="true"
                app:siv_name="@string/label_my_addresses" />

            <com.jyl.healthytakeout.widget.section.SectionTextItemView
                android:id="@+id/btn_my_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:siv_icon="@drawable/ic_myinfo"
                app:siv_indicator="true"
                app:siv_name="@string/label_my_Info" />

            <com.jyl.healthytakeout.widget.section.SectionTextItemView
                android:id="@+id/btn_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:siv_icon="@drawable/ic_feedback"
                app:siv_indicator="true"
                app:siv_name="@string/label_feedback" />

        </com.jyl.healthytakeout.widget.section.SectionView>

        <com.jyl.healthytakeout.widget.section.SectionView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.jyl.healthytakeout.widget.section.SectionTextItemView
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:siv_icon="@drawable/ic_logout"
                app:siv_indicator="true"
                app:siv_name="@string/label_logout" />

        </com.jyl.healthytakeout.widget.section.SectionView>

    </LinearLayout>

</LinearLayout>